추가: 자바 문법 (ScopedValue, Unnamed, Sealed-Class ...)