@@ -9,6 +9,8 @@ subprojects {
         "testImplementation"("org.junit.platform:junit-platform-launcher:")
         "testImplementation"("org.junit.jupiter:junit-jupiter-api:5.12.2")
         "testImplementation"("org.junit.jupiter:junit-jupiter-engine:5.12.2")
+        "testImplementation"("org.junit.jupiter:junit-jupiter-params:5.12.2")
+        "testImplementation"("org.assertj:assertj-core:4.0.0-M1")
     }
 
     plugins.withType<JavaPlugin> {
@@ -17,7 +19,17 @@ subprojects {
         }
     }
 
+    tasks.withType<JavaCompile> {
+        options.release.set(24)
+        options.compilerArgs.add("--enable-preview")
+    }
+
     tasks.withType<Test> {
+        jvmArgs("--enable-preview")
         useJUnitPlatform()
+    }
+
+    tasks.withType<JavaExec> {
+        jvmArgs("--enable-preview")
     }
 }
